<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/spacing_16"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/txtExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_16"
        android:gravity="center"
        android:text="@string/exit_dialog_title"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtExitDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:text="@string/exit_dialog_message"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="@id/txtExit"
        app:layout_constraintTop_toBottomOf="@id/txtExit" />

    <TextView
        android:id="@+id/btnCancelExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_36"
        android:layout_marginEnd="@dimen/spacing_32"
        android:layout_marginBottom="@dimen/spacing_16"
        android:text="@string/cancel"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOkExit"
        app:layout_constraintTop_toBottomOf="@id/txtExitDesc" />

    <TextView
        android:id="@+id/btnOkExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_32"
        android:text="@string/ok"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancelExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCancelExit" />

</androidx.constraintlayout.widget.ConstraintLayout>