<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_24"
        android:text="@string/bs_logo_take_photo"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtChoseFromLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_24"
        android:text="@string/bs_logo_choose_library"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTakePhoto" />

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_24"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChoseFromLibrary" />
</androidx.constraintlayout.widget.ConstraintLayout>